still having issues with the white boarder, as it leaves a white dot behind once it is closed.

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -16,7 +16,9 @@
     width: fit-content;
     height: fit-content;
     overflow: hidden;
-    max-height: 200px;
+    max-height: 150px;
     background-color: var(--lightgrey);
     margin-top: 10px;
+    border: var(--ghostwhite) solid 2px;
+    border-radius: 10px;
 }
